sandbox/output
fizzbuzz_tests.c:6:13: error: initialization makes integer from pointer without a cast [-Werror]
 char st16 = "1, 2, Fizz, 4, Buzz, Fizz, 7, 8, Fizz, 10, 11, Fizz, 13, 14, FizzBuzz, 16";
             ^
fizzbuzz_tests.c:6:1: error: initializer element is not computable at load time
 char st16 = "1, 2, Fizz, 4, Buzz, Fizz, 7, 8, Fizz, 10, 11, Fizz, 13, 14, FizzBuzz, 16";
 ^
fizzbuzz_tests.c: In function 'fizzbuzzTests':
fizzbuzz_tests.c:15:5: error: passing argument 1 of '__builtin_strlen' makes pointer from integer without a cast [-Werror]
     assert (strcmp(fizzBuzzSeq(16), st16) == 0);
     ^
fizzbuzz_tests.c:15:5: note: expected 'const char *' but argument is of type 'char'
fizzbuzz_tests.c:15:5: error: passing argument 2 of '__builtin_strcmp' makes pointer from integer without a cast [-Werror]
fizzbuzz_tests.c:15:5: note: expected 'const char *' but argument is of type 'char'
fizzbuzz_tests.c:15:5: error: passing argument 2 of '__builtin_strcmp' makes pointer from integer without a cast [-Werror]
fizzbuzz_tests.c:15:5: note: expected 'const char *' but argument is of type 'char'
fizzbuzz_tests.c:15:5: error: passing argument 1 of '__builtin_strlen' makes pointer from integer without a cast [-Werror]
fizzbuzz_tests.c:15:5: note: expected 'const char *' but argument is of type 'char'
fizzbuzz_tests.c:15:5: error: passing argument 2 of '__builtin_strcmp' makes pointer from integer without a cast [-Werror]
fizzbuzz_tests.c:15:5: note: expected 'const char *' but argument is of type 'char'
fizzbuzz_tests.c:15:5: error: passing argument 2 of '__builtin_strcmp' makes pointer from integer without a cast [-Werror]
fizzbuzz_tests.c:15:5: note: expected 'const char *' but argument is of type 'char'
cc1: all warnings being treated as errors
make: *** [test] Error 1
